javascript/ql/test/query-tests/LanguageFeatures/SyntaxError/tst.js
function findBox() {
  return $("box.important // $ Alert
